@@ -145,6 +145,10 @@
             <key> <string>update_action</string> </key>
             <value> <string></string> </value>
         </item>
+        <item>
+            <key> <string>update_action_title</string> </key>
+            <value> <string></string> </value>
+        </item>
       </dictionary>
     </pickle>
   </record>
